<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/chatLayout">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_margin="20dp"
        android:overScrollMode="always"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/editTxtChat"
            android:layout_width="8dp"
            android:layout_height="46dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:hint="Type a new message"
            android:background="@drawable/custom_input" />

        <Button
            android:id="@+id/btnSendChat"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="SEND" />
    </LinearLayout>

</LinearLayout>