...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Message">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRoomRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="55dp"
        android:overScrollMode="always"
        android:scrollbars="vertical">

...
