<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/updateCounselorProfileInfo"
    android:gravity="center"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="Update Profile"
        android:textColor="@color/light_blue"
        android:textAlignment="center"
        android:textSize="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input">

        <ImageView
            android:id="@+id/imageViewCounselorName"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/light_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input">

        <ImageView
            android:id="@+id/imageViewCounselorBio"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_info" />

        <EditText
            android:id="@+id/etBio"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Bio here...."
            android:textColor="@color/light_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input">

        <ImageView
            android:id="@+id/imageViewCounselorEmail"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/light_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input">

        <ImageView
            android:id="@+id/imageViewCounselorWebsite"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_website" />

        <EditText
            android:id="@+id/etWebsite"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/light_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input">

        <ImageView
            android:id="@+id/imageViewCounselorLocation"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_location" />

        <AutoCompleteTextView
            android:id="@+id/etLocation"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Location here...."
            android:textColor="@color/light_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_blue_button"
            android:textSize="15dp"
            android:text="Save"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_gray_button"
            android:textSize="15dp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="@color/blue" />

    </LinearLayout>


</LinearLayout>