<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/updateUserProfileInfo"
    android:gravity="center">

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="Update Profile"
        android:textColor="@color/light_blue"
        android:textAlignment="center"
        android:textSize="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input">

        <ImageView
            android:id="@+id/imageViewUserName"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_username" />

        <EditText
            android:id="@+id/update_userName"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="user name here...."
            android:textColor="@color/light_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input">

        <ImageView
            android:id="@+id/imageViewName"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_name" />

        <EditText
            android:id="@+id/update_name"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Name here...."
            android:textColor="@color/light_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_input">

        <ImageView
            android:id="@+id/imageViewUserEmail"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_email" />

        <EditText
            android:id="@+id/update_email"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Email here...."
            android:textColor="@color/light_blue"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_blue_button"
            android:textSize="15dp"
            android:text="Save"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custom_gray_button"
            android:textSize="15dp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="@color/blue" />

    </LinearLayout>


</LinearLayout>