<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="15dp"
    android:orientation="vertical"
    android:background="@drawable/custom_input"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Post"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@drawable/ic_close"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/et_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@android:drawable/editbox_background_normal"
        android:padding="15dp"/>

    <Button
        android:id="@+id/btn_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:layout_margin="15dp"
        android:text="Post"/>


</LinearLayout>