package comp321.hope_for_all;

import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.rule.ActivityTestRule;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import comp321.hope_for_all.activities.MainCounselor;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.matcher.ViewMatchers.withId;

@RunWith(AndroidJUnit4.class)
public class CounselorPostTest {
    @Rule
    public ActivityTestRule<MainCounselor> mActivityTestRule =
            new ActivityTestRule<>(MainCounselor.class);

    @Test
    public void addPostDisplay(){

        onView(withId(R.id.button_add_post)).perform(click());

        onView(withId(R.id.et_post))
                .perform(typeText("Hello Testing Counselor Chat"));

        onView(withId(R.id.btn_post))
                .perform(click());

    }

}
